[tool.poetry]
name = "mmtour"
version = "0.1.0"
description = ""
authors = ["Mairondc21 <duartemairon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^24.8.0"
flake8 = "^7.1.1"
pandas = "^2.2.2"
xlrd = "^2.0.1"
taskipy = "^1.13.0"
isort = "^5.13.2"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.taskipy.tasks]
format = "isort src/mmtour_func.py && black src/mmtour_func.py"
lint = "flake8 src/mmtour_func.py"
check = "task format && task lint"